add storyboard lock

--- a/ReverseWords/Main.storyboard
+++ b/ReverseWords/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="all" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -12,7 +12,7 @@
         <!--Reverse Words-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="Reverse Words" id="BYZ-38-t0r" customClass="ViewController" customModule="FoxmindEd_ReverseWords" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Reverse Words" id="BYZ-38-t0r" customClass="ViewController" customModule="ReverseWords" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,6 +21,9 @@
                                 <rect key="frame" x="16" y="290" width="382" height="24.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="P82-6x-79O"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reverse Words" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hy0-re-Y1O">
                                 <rect key="frame" x="82" y="132" width="250" height="43"/>
@@ -40,10 +43,10 @@ Please type text below</string>
                                 <rect key="frame" x="16" y="330.5" width="382" height="2"/>
                                 <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="2" id="zTi-lu-AFc"/>
+                                    <constraint firstAttribute="height" constant="2" id="5Xb-dw-RGd"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" highlighted="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jB7-3k-NHw">
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jB7-3k-NHw">
                                 <rect key="frame" x="16" y="762" width="382" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="SBj-Mg-mHu"/>
@@ -51,7 +54,7 @@ Please type text below</string>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Reverse" cornerStyle="large"/>
                                 <connections>
-                                    <action selector="reverseButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HK6-qT-VyT"/>
+                                    <action selector="reverseButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="iIv-Ej-Xtn"/>
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="9zq-yI-pSL">
@@ -95,23 +98,23 @@ Please type text below</string>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="9zq-yI-pSL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="1Ue-m3-4fD"/>
-                            <constraint firstItem="7jc-6A-46v" firstAttribute="top" secondItem="6Ti-ND-OG0" secondAttribute="bottom" constant="16" id="1h1-wM-05u"/>
                             <constraint firstItem="6Ti-ND-OG0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2Mx-TE-Nvg"/>
                             <constraint firstItem="Hy0-re-Y1O" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2Yf-1z-PqH"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9zq-yI-pSL" secondAttribute="trailing" constant="16" id="37I-Oz-eWB"/>
-                            <constraint firstItem="9zq-yI-pSL" firstAttribute="top" secondItem="7jc-6A-46v" secondAttribute="bottom" constant="16" id="Br3-v2-jzg"/>
                             <constraint firstItem="krO-rk-Xq1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GLP-Qg-zai"/>
-                            <constraint firstItem="7jc-6A-46v" firstAttribute="width" secondItem="6Ti-ND-OG0" secondAttribute="width" id="GPp-LS-3uE"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6Ti-ND-OG0" secondAttribute="trailing" id="IPv-Lb-r06"/>
+                            <constraint firstItem="7jc-6A-46v" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="HEl-4Z-ddp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6Ti-ND-OG0" secondAttribute="trailing" constant="16" id="IPv-Lb-r06"/>
+                            <constraint firstAttribute="trailing" secondItem="7jc-6A-46v" secondAttribute="trailing" constant="16" id="Jj9-G6-AlP"/>
                             <constraint firstItem="krO-rk-Xq1" firstAttribute="top" secondItem="Hy0-re-Y1O" secondAttribute="bottom" constant="32" id="Ohb-Jt-ylZ"/>
                             <constraint firstItem="6Ti-ND-OG0" firstAttribute="top" secondItem="krO-rk-Xq1" secondAttribute="bottom" constant="40" id="TyD-qv-XZh"/>
                             <constraint firstItem="jB7-3k-NHw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XQu-I7-s6n"/>
                             <constraint firstItem="6Ti-ND-OG0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="YQQ-tt-OPb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="jB7-3k-NHw" secondAttribute="trailing" id="bUX-iU-p67"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jB7-3k-NHw" secondAttribute="bottom" constant="40" id="djx-zY-cqp"/>
+                            <constraint firstItem="9zq-yI-pSL" firstAttribute="top" secondItem="7jc-6A-46v" secondAttribute="bottom" constant="16" id="fXl-NO-JSZ"/>
                             <constraint firstItem="jB7-3k-NHw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="l1e-t2-RLm"/>
+                            <constraint firstItem="7jc-6A-46v" firstAttribute="top" secondItem="6Ti-ND-OG0" secondAttribute="bottom" constant="16" id="s2H-9y-FSC"/>
                             <constraint firstItem="Hy0-re-Y1O" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="tS8-sV-cNI"/>
-                            <constraint firstItem="7jc-6A-46v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zCn-K2-U6B"/>
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
