--- a/ReverseWords/Main.storyboard
+++ b/ReverseWords/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Reverse Words-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="Reverse Words" id="BYZ-38-t0r" customClass="ViewController" customModule="ReverseWords" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Reverse Words" id="BYZ-38-t0r" customClass="ReverseWordsViewController" customModule="ReverseWords" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
