fix for unit and ui tests

--- a/ReverseWords/Main.storyboard
+++ b/ReverseWords/Main.storyboard
@@ -65,6 +65,7 @@ Please type text below</string>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Reversed text" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JkS-t2-wMw">
                                                 <rect key="frame" x="0.0" y="0.0" width="140.5" height="29"/>
+                                                <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                 <color key="textColor" systemColor="tintColor"/>
                                                 <nil key="highlightedColor"/>
