add new elements to UI and new reverse method to model

--- a/ReverseWords/Main.storyboard
+++ b/ReverseWords/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Text to reverse" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Ti-ND-OG0">
-                                <rect key="frame" x="16" y="290" width="382" height="24.5"/>
+                                <rect key="frame" x="16" y="250" width="382" height="24.5"/>
                                 <accessibility key="accessibilityConfiguration" identifier="reverseTextField"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done"/>
@@ -27,13 +27,13 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reverse Words" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hy0-re-Y1O">
-                                <rect key="frame" x="82" y="132" width="250" height="43"/>
+                                <rect key="frame" x="82" y="116" width="250" height="43"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="krO-rk-Xq1">
-                                <rect key="frame" x="48" y="207" width="318.5" height="43"/>
+                                <rect key="frame" x="48" y="183" width="318.5" height="43"/>
                                 <string key="text">This application will reverse your words.
 Please type text below</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
@@ -41,17 +41,17 @@ Please type text below</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7jc-6A-46v">
-                                <rect key="frame" x="16" y="330.5" width="382" height="2"/>
+                                <rect key="frame" x="16" y="282.5" width="382" height="2"/>
                                 <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="2" id="5Xb-dw-RGd"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jB7-3k-NHw">
-                                <rect key="frame" x="16" y="762" width="382" height="60"/>
+                                <rect key="frame" x="16" y="423.5" width="382" height="40"/>
                                 <accessibility key="accessibilityConfiguration" identifier="reverseButton"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="SBj-Mg-mHu"/>
+                                    <constraint firstAttribute="height" constant="40" id="SBj-Mg-mHu"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Reverse" cornerStyle="large"/>
@@ -60,7 +60,7 @@ Please type text below</string>
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="9zq-yI-pSL">
-                                <rect key="frame" x="16" y="348.5" width="382" height="42"/>
+                                <rect key="frame" x="16" y="373.5" width="382" height="42"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9R7-VM-cx1" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="140.5" height="29"/>
@@ -96,36 +96,70 @@ Please type text below</string>
                                 <viewLayoutGuide key="contentLayoutGuide" id="t8w-s6-8IB"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="QcB-4u-y2T"/>
                             </scrollView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="V4R-FF-UX4">
+                                <rect key="frame" x="16" y="292.5" width="382" height="32"/>
+                                <segments>
+                                    <segment title="Default"/>
+                                    <segment title="Custom"/>
+                                </segments>
+                                <connections>
+                                    <action selector="filterSegmentedControlChanged" destination="BYZ-38-t0r" eventType="valueChanged" id="LiI-GL-xPb"/>
+                                </connections>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All characters except alphabetic symbols" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iwo-Ww-dqU">
+                                <rect key="frame" x="16" y="338" width="382" height="21"/>
+                                <accessibility key="accessibilityConfiguration" identifier="defaultInformationLabel"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RwL-it-5Ti">
+                                <rect key="frame" x="16" y="331.5" width="382" height="34"/>
+                                <accessibility key="accessibilityConfiguration" identifier="customFilterTextField"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="9zq-yI-pSL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="1Ue-m3-4fD"/>
                             <constraint firstItem="6Ti-ND-OG0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2Mx-TE-Nvg"/>
                             <constraint firstItem="Hy0-re-Y1O" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2Yf-1z-PqH"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9zq-yI-pSL" secondAttribute="trailing" constant="16" id="37I-Oz-eWB"/>
+                            <constraint firstItem="RwL-it-5Ti" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="3cy-5g-KOw"/>
+                            <constraint firstItem="jB7-3k-NHw" firstAttribute="top" secondItem="9zq-yI-pSL" secondAttribute="bottom" constant="8" id="5Zp-6h-6zZ"/>
                             <constraint firstItem="krO-rk-Xq1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GLP-Qg-zai"/>
                             <constraint firstItem="7jc-6A-46v" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="HEl-4Z-ddp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6Ti-ND-OG0" secondAttribute="trailing" constant="16" id="IPv-Lb-r06"/>
+                            <constraint firstItem="RwL-it-5Ti" firstAttribute="top" secondItem="V4R-FF-UX4" secondAttribute="bottom" constant="8" id="JCj-Pd-vtF"/>
                             <constraint firstAttribute="trailing" secondItem="7jc-6A-46v" secondAttribute="trailing" constant="16" id="Jj9-G6-AlP"/>
-                            <constraint firstItem="krO-rk-Xq1" firstAttribute="top" secondItem="Hy0-re-Y1O" secondAttribute="bottom" constant="32" id="Ohb-Jt-ylZ"/>
-                            <constraint firstItem="6Ti-ND-OG0" firstAttribute="top" secondItem="krO-rk-Xq1" secondAttribute="bottom" constant="40" id="TyD-qv-XZh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9zq-yI-pSL" secondAttribute="trailing" constant="16" id="Ksc-It-Lqd"/>
+                            <constraint firstItem="RwL-it-5Ti" firstAttribute="centerY" secondItem="iwo-Ww-dqU" secondAttribute="centerY" id="Ldf-fR-gHe"/>
+                            <constraint firstItem="krO-rk-Xq1" firstAttribute="top" secondItem="Hy0-re-Y1O" secondAttribute="bottom" constant="24" id="Ohb-Jt-ylZ"/>
+                            <constraint firstItem="9zq-yI-pSL" firstAttribute="top" secondItem="RwL-it-5Ti" secondAttribute="bottom" constant="8" id="Qok-kv-RXq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RwL-it-5Ti" secondAttribute="trailing" constant="16" id="Qq8-Fv-so6"/>
+                            <constraint firstItem="9zq-yI-pSL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="TXf-WM-C7K"/>
+                            <constraint firstItem="6Ti-ND-OG0" firstAttribute="top" secondItem="krO-rk-Xq1" secondAttribute="bottom" constant="24" id="TyD-qv-XZh"/>
                             <constraint firstItem="jB7-3k-NHw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XQu-I7-s6n"/>
                             <constraint firstItem="6Ti-ND-OG0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="YQQ-tt-OPb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="jB7-3k-NHw" secondAttribute="trailing" id="bUX-iU-p67"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jB7-3k-NHw" secondAttribute="bottom" constant="40" id="djx-zY-cqp"/>
-                            <constraint firstItem="9zq-yI-pSL" firstAttribute="top" secondItem="7jc-6A-46v" secondAttribute="bottom" constant="16" id="fXl-NO-JSZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="V4R-FF-UX4" secondAttribute="trailing" constant="16" id="dLv-Ji-Gd1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iwo-Ww-dqU" secondAttribute="trailing" constant="16" id="evd-9a-Smb"/>
+                            <constraint firstItem="V4R-FF-UX4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="fcH-Gj-hdS"/>
                             <constraint firstItem="jB7-3k-NHw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="l1e-t2-RLm"/>
-                            <constraint firstItem="7jc-6A-46v" firstAttribute="top" secondItem="6Ti-ND-OG0" secondAttribute="bottom" constant="16" id="s2H-9y-FSC"/>
-                            <constraint firstItem="Hy0-re-Y1O" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="tS8-sV-cNI"/>
+                            <constraint firstItem="V4R-FF-UX4" firstAttribute="top" secondItem="7jc-6A-46v" secondAttribute="bottom" constant="8" id="lsp-fo-6Ze"/>
+                            <constraint firstItem="iwo-Ww-dqU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="lts-YT-9kY"/>
+                            <constraint firstItem="7jc-6A-46v" firstAttribute="top" secondItem="6Ti-ND-OG0" secondAttribute="bottom" constant="8" id="s2H-9y-FSC"/>
+                            <constraint firstItem="Hy0-re-Y1O" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="tS8-sV-cNI"/>
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="customFilterTextField" destination="RwL-it-5Ti" id="qvS-vd-KNU"/>
+                        <outlet property="defaultInformationLabel" destination="iwo-Ww-dqU" id="4Xl-NA-Nc6"/>
                         <outlet property="enteredStringTextField" destination="6Ti-ND-OG0" id="oag-Su-dco"/>
+                        <outlet property="filterSegmentedControl" destination="V4R-FF-UX4" id="yc7-ax-hbL"/>
                         <outlet property="resultLabel" destination="JkS-t2-wMw" id="gLY-ax-4tb"/>
                         <outlet property="reverseButton" destination="jB7-3k-NHw" id="Ml4-Zo-KZz"/>
-                        <outlet property="reverseButtonBottomConstraint" destination="djx-zY-cqp" id="lY4-4b-LWM"/>
                         <outlet property="textLabelBottomLineView" destination="7jc-6A-46v" id="Vwa-YB-z6O"/>
                     </connections>
                 </viewController>
